lib/lucene-query-parser.js
(function(f){if(typeof exports==="object"&&typeof module!=="undefined"){module.exports=f()}else if(typeof define==="function"&&define.amd){define([],f)}else{var g;if(typeof window!=="undefined"){g=window}else if(typeof global!=="undefined"){g=global}else if(typeof self!=="undefined"){g=self}else{g=this}g.lucenequeryparser=f()}})(function(){var define,module,exports;module={exports:exports={}};module.exports=function(){function quote(s){return'"'+s.replace(/\\/g,"\\\\").replace(/"/g,'\\"').replace(/\x08/g,"\\b").replace(/\t/g,"\\t").replace(/\n/g,"\\n").replace(/\f/g,"\\f").replace(/\r/g,"\\r").replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g,escape)+'"'}var result={parse:function(input,startRule){var parseFunctions={start:parse_start,node:parse_node,group_exp:parse_group_exp,paren_exp:parse_paren_exp,field_exp:parse_field_exp,fieldname:parse_fieldname,term:parse_term,unquoted_term:parse_unquoted_term,term_char:parse_term_char,quoted_term:parse_quoted_term,proximity_modifier:parse_proximity_modifier,boost_modifier:parse_boost_modifier,fuzzy_modifier:parse_fuzzy_modifier,decimal_or_int_exp:parse_decimal_or_int_exp,decimal_exp:parse_decimal_exp,int_exp:parse_int_exp,range_operator_exp:parse_range_operator_exp,operator_exp:parse_operator_exp,operator:parse_operator,prefix_operator_exp:parse_prefix_operator_exp,prefix_operator:parse_prefix_operator,_:parse__,EOF:parse_EOF};if(startRule!==undefined){if(parseFunctions[startRule]===undefined){throw new Error("Invalid rule name: "+quote(startRule)+".")}}else{startRule="start"}var pos=0;var reportFailures=0;var rightmostFailuresPos=0;var rightmostFailuresExpected=[];function padLeft(input,padding,length){var result=input;var padLength=length-input.length;for(var i=0;i<padLength;i++){result=padding+result}return result}function escape(ch){var charCode=ch.charCodeAt(0);var escapeChar;var length;if(charCode<=255){escapeChar="x";length=2}else{escapeChar="u";length=4}return"\\"+escapeChar+padLeft(charCode.toString(16).toUpperCase(),"0",length)}function matchFailed(failure){if(pos<rightmostFailuresPos){return}if(pos>rightmostFailuresPos){rightmostFailuresPos=pos;rightmostFailuresExpected=[]}rightmostFailuresExpected.push(failure)}function parse_start(){var result0,result1,result2;var pos0,pos1;pos0=pos;pos1=pos;result0=[];result1=parse__();while(result1!==null){result0.push(result1);result1=parse__()}if(result0!==null){result2=parse_node();if(result2!==null){result1=[];while(result2!==null){result1.push(result2);result2=parse_node()}}else{result1=null}if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,node){return node[0]}(pos0,result0[1])}if(result0===null){pos=pos0}if(result0===null){pos0=pos;result0=[];result1=parse__();while(result1!==null){result0.push(result1);result1=parse__()}if(result0!==null){result0=function(offset){return{}}(pos0)}if(result0===null){pos=pos0}if(result0===null){pos0=pos;result0=parse_EOF();if(result0!==null){result0=function(offset){return{}}(pos0)}if(result0===null){pos=pos0}}}return result0}function parse_node(){var result0,result1,result2,result3;var pos0,pos1;pos0=pos;pos1=pos;result0=parse_operator_exp();if(result0!==null){result1=parse_EOF();if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,operator){return{operator:operator}}(pos0,result0[0])}if(result0===null){pos=pos0}if(result0===null){pos0=pos;pos1=pos;result0=parse_operator_exp();if(result0!==null){result1=parse_node();if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,operator,right){return right}(pos0,result0[0],result0[1])}if(result0===null){pos=pos0}if(result0===null){pos0=pos;pos1=pos;result0=parse_group_exp();if(result0!==null){result1=[];result2=parse_operator_exp();while(result2!==null){result1.push(result2);result2=parse_operator_exp()}if(result1!==null){result2=[];result3=parse_node();while(result3!==null){result2.push(result3);result3=parse_node()}if(result2!==null){result0=[result0,result1,result2]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,left,operator,right){var node={left:left};var right=right.length==0?null:right[0]["right"]==null?right[0]["left"]:right[0];if(right!=null){node["operator"]=operator==""?"<implicit>":operator[0];node["right"]=right}return node}(pos0,result0[0],result0[1],result0[2])}if(result0===null){pos=pos0}}}return result0}function parse_group_exp(){var result0,result1,result2;var pos0,pos1;pos0=pos;pos1=pos;result0=parse_field_exp();if(result0!==null){result1=[];result2=parse__();while(result2!==null){result1.push(result2);result2=parse__()}if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,field_exp){return field_exp}(pos0,result0[0])}if(result0===null){pos=pos0}if(result0===null){result0=parse_paren_exp()}return result0}function parse_paren_exp(){var result0,result1,result2,result3,result4;var pos0,pos1;pos0=pos;pos1=pos;if(input.charCodeAt(pos)===40){result0="(";pos++}else{result0=null;if(reportFailures===0){matchFailed('"("')}}if(result0!==null){result2=parse_node();if(result2!==null){result1=[];while(result2!==null){result1.push(result2);result2=parse_node()}}else{result1=null}if(result1!==null){if(input.charCodeAt(pos)===41){result2=")";pos++}else{result2=null;if(reportFailures===0){matchFailed('")"')}}if(result2!==null){result3=[];result4=parse__();while(result4!==null){result3.push(result4);result4=parse__()}if(result3!==null){result0=[result0,result1,result2,result3]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,node){return node[0]}(pos0,result0[1])}if(result0===null){pos=pos0}return result0}function parse_field_exp(){var result0,result1;var pos0,pos1;pos0=pos;pos1=pos;result0=parse_fieldname();result0=result0!==null?result0:"";if(result0!==null){result1=parse_range_operator_exp();if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,fieldname,range){range["field"]=fieldname==""?"<implicit>":fieldname;return range}(pos0,result0[0],result0[1])}if(result0===null){pos=pos0}if(result0===null){pos0=pos;pos1=pos;result0=parse_fieldname();if(result0!==null){result1=parse_paren_exp();if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,fieldname,node){node["field"]=fieldname;return node}(pos0,result0[0],result0[1])}if(result0===null){pos=pos0}if(result0===null){pos0=pos;pos1=pos;result0=parse_fieldname();result0=result0!==null?result0:"";if(result0!==null){result1=parse_term();if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,fieldname,term){var fieldexp={field:fieldname==""?"<implicit>":fieldname};for(var key in term)fieldexp[key]=term[key];return fieldexp}(pos0,result0[0],result0[1])}if(result0===null){pos=pos0}}}return result0}function parse_fieldname(){var result0,result1;var pos0,pos1;pos0=pos;pos1=pos;result0=parse_unquoted_term();if(result0!==null){if(/^[:]/.test(input.charAt(pos))){result1=input.charAt(pos);pos++}else{result1=null;if(reportFailures===0){matchFailed("[:]")}}if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,fieldname){return fieldname}(pos0,result0[0])}if(result0===null){pos=pos0}return result0}function parse_term(){var result0,result1,result2,result3,result4,result5;var pos0,pos1;pos0=pos;pos1=pos;result0=parse_prefix_operator_exp();result0=result0!==null?result0:"";if(result0!==null){result1=parse_quoted_term();if(result1!==null){result2=parse_proximity_modifier();result2=result2!==null?result2:"";if(result2!==null){result3=parse_boost_modifier();result3=result3!==null?result3:"";if(result3!==null){result4=[];result5=parse__();while(result5!==null){result4.push(result5);result5=parse__()}if(result4!==null){result0=[result0,result1,result2,result3,result4]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,op,term,proximity,boost){var result={term:term};if(""!=proximity){result["proximity"]=proximity}if(""!=boost){result["boost"]=boost}if(""!=op){result["prefix"]=op}return result}(pos0,result0[0],result0[1],result0[2],result0[3])}if(result0===null){pos=pos0}if(result0===null){pos0=pos;pos1=pos;result0=parse_prefix_operator_exp();result0=result0!==null?result0:"";if(result0!==null){result1=parse_unquoted_term();if(result1!==null){result2=parse_fuzzy_modifier();result2=result2!==null?result2:"";if(result2!==null){result3=parse_boost_modifier();result3=result3!==null?result3:"";if(result3!==null){result4=[];result5=parse__();while(result5!==null){result4.push(result5);result5=parse__()}if(result4!==null){result0=[result0,result1,result2,result3,result4]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,op,term,similarity,boost){var result={term:term};if(""!=similarity){result["similarity"]=similarity}if(""!=boost){result["boost"]=boost}if(""!=op){result["prefix"]=op}return result}(pos0,result0[0],result0[1],result0[2],result0[3])}if(result0===null){pos=pos0}}return result0}function parse_unquoted_term(){var result0,result1;var pos0;pos0=pos;result1=parse_term_char();if(result1!==null){result0=[];while(result1!==null){result0.push(result1);result1=parse_term_char()}}else{result0=null}if(result0!==null){result0=function(offset,term){return term.join("")}(pos0,result0)}if(result0===null){pos=pos0}return result0}function parse_term_char(){var result0;if(input.charCodeAt(pos)===46){result0=".";pos++}else{result0=null;if(reportFailures===0){matchFailed('"."')}}if(result0===null){if(/^[^: \t\r\n\f{}()"\/^~[\]]/.test(input.charAt(pos))){result0=input.charAt(pos);pos++}else{result0=null;if(reportFailures===0){matchFailed('[^: \\t\\r\\n\\f{}()"\\/^~[\\]]')}}}return result0}function parse_quoted_term(){var result0,result1,result2;var pos0,pos1;pos0=pos;pos1=pos;if(input.charCodeAt(pos)===34){result0='"';pos++}else{result0=null;if(reportFailures===0){matchFailed('"\\""')}}if(result0!==null){if(/^[^"]/.test(input.charAt(pos))){result2=input.charAt(pos);pos++}else{result2=null;if(reportFailures===0){matchFailed('[^"]')}}if(result2!==null){result1=[];while(result2!==null){result1.push(result2);if(/^[^"]/.test(input.charAt(pos))){result2=input.charAt(pos);pos++}else{result2=null;if(reportFailures===0){matchFailed('[^"]')}}}}else{result1=null}if(result1!==null){if(input.charCodeAt(pos)===34){result2='"';pos++}else{result2=null;if(reportFailures===0){matchFailed('"\\""')}}if(result2!==null){result0=[result0,result1,result2]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,term){return term.join("")}(pos0,result0[1])}if(result0===null){pos=pos0}return result0}function parse_proximity_modifier(){var result0,result1;var pos0,pos1;pos0=pos;pos1=pos;if(input.charCodeAt(pos)===126){result0="~";pos++}else{result0=null;if(reportFailures===0){matchFailed('"~"')}}if(result0!==null){result1=parse_int_exp();if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,proximity){return proximity}(pos0,result0[1])}if(result0===null){pos=pos0}return result0}function parse_boost_modifier(){var result0,result1;var pos0,pos1;pos0=pos;pos1=pos;if(input.charCodeAt(pos)===94){result0="^";pos++}else{result0=null;if(reportFailures===0){matchFailed('"^"')}}if(result0!==null){result1=parse_decimal_or_int_exp();if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,boost){return boost}(pos0,result0[1])}if(result0===null){pos=pos0}return result0}function parse_fuzzy_modifier(){var result0,result1;var pos0,pos1;pos0=pos;pos1=pos;if(input.charCodeAt(pos)===126){result0="~";pos++}else{result0=null;if(reportFailures===0){matchFailed('"~"')}}if(result0!==null){result1=parse_decimal_exp();result1=result1!==null?result1:"";if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,fuzziness){return fuzziness==""?.5:fuzziness}(pos0,result0[1])}if(result0===null){pos=pos0}return result0}function parse_decimal_or_int_exp(){var result0;result0=parse_decimal_exp();if(result0===null){result0=parse_int_exp()}return result0}function parse_decimal_exp(){var result0,result1,result2;var pos0,pos1;pos0=pos;pos1=pos;if(input.substr(pos,2)==="0."){result0="0.";pos+=2}else{result0=null;if(reportFailures===0){matchFailed('"0."')}}if(result0!==null){if(/^[0-9]/.test(input.charAt(pos))){result2=input.charAt(pos);pos++}else{result2=null;if(reportFailures===0){matchFailed("[0-9]")}}if(result2!==null){result1=[];while(result2!==null){result1.push(result2);if(/^[0-9]/.test(input.charAt(pos))){result2=input.charAt(pos);pos++}else{result2=null;if(reportFailures===0){matchFailed("[0-9]")}}}}else{result1=null}if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,val){return parseFloat("0."+val.join(""))}(pos0,result0[1])}if(result0===null){pos=pos0}return result0}function parse_int_exp(){var result0,result1;var pos0;pos0=pos;if(/^[0-9]/.test(input.charAt(pos))){result1=input.charAt(pos);pos++}else{result1=null;if(reportFailures===0){matchFailed("[0-9]")}}if(result1!==null){result0=[];while(result1!==null){result0.push(result1);if(/^[0-9]/.test(input.charAt(pos))){result1=input.charAt(pos);pos++}else{result1=null;if(reportFailures===0){matchFailed("[0-9]")}}}}else{result0=null}if(result0!==null){result0=function(offset,val){return parseInt(val.join(""))}(pos0,result0)}if(result0===null){pos=pos0}return result0}function parse_range_operator_exp(){var result0,result1,result2,result3,result4,result5,result6;var pos0,pos1;pos0=pos;pos1=pos;if(input.charCodeAt(pos)===91){result0="[";pos++}else{result0=null;if(reportFailures===0){matchFailed('"["')}}if(result0!==null){result1=parse_unquoted_term();if(result1!==null){result2=[];result3=parse__();while(result3!==null){result2.push(result3);result3=parse__()}if(result2!==null){if(input.substr(pos,2)==="TO"){result3="TO";pos+=2}else{result3=null;if(reportFailures===0){matchFailed('"TO"')}}if(result3!==null){result5=parse__();if(result5!==null){result4=[];while(result5!==null){result4.push(result5);result5=parse__()}}else{result4=null}if(result4!==null){result5=parse_unquoted_term();if(result5!==null){if(input.charCodeAt(pos)===93){result6="]";pos++}else{result6=null;if(reportFailures===0){matchFailed('"]"')}}if(result6!==null){result0=[result0,result1,result2,result3,result4,result5,result6]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,term_min,term_max){return{term_min:term_min,term_max:term_max,inclusive:true}}(pos0,result0[1],result0[5])}if(result0===null){pos=pos0}if(result0===null){pos0=pos;pos1=pos;if(input.charCodeAt(pos)===123){result0="{";pos++}else{result0=null;if(reportFailures===0){matchFailed('"{"')}}if(result0!==null){result1=parse_unquoted_term();if(result1!==null){result2=[];result3=parse__();while(result3!==null){result2.push(result3);result3=parse__()}if(result2!==null){if(input.substr(pos,2)==="TO"){result3="TO";pos+=2}else{result3=null;if(reportFailures===0){matchFailed('"TO"')}}if(result3!==null){result5=parse__();if(result5!==null){result4=[];while(result5!==null){result4.push(result5);result5=parse__()}}else{result4=null}if(result4!==null){result5=parse_unquoted_term();if(result5!==null){if(input.charCodeAt(pos)===125){result6="}";pos++}else{result6=null;if(reportFailures===0){matchFailed('"}"')}}if(result6!==null){result0=[result0,result1,result2,result3,result4,result5,result6]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,term_min,term_max){return{term_min:term_min,term_max:term_max,inclusive:false}}(pos0,result0[1],result0[5])}if(result0===null){pos=pos0}}return result0}function parse_operator_exp(){var result0,result1,result2,result3;var pos0,pos1;pos0=pos;pos1=pos;result0=[];result1=parse__();while(result1!==null){result0.push(result1);result1=parse__()}if(result0!==null){result1=parse_operator();if(result1!==null){result3=parse__();if(result3!==null){result2=[];while(result3!==null){result2.push(result3);result3=parse__()}}else{result2=null}if(result2!==null){result0=[result0,result1,result2]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,operator){return operator}(pos0,result0[1])}if(result0===null){pos=pos0}if(result0===null){pos0=pos;pos1=pos;result0=[];result1=parse__();while(result1!==null){result0.push(result1);result1=parse__()}if(result0!==null){result1=parse_operator();if(result1!==null){result2=parse_EOF();if(result2!==null){result0=[result0,result1,result2]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,operator){return operator}(pos0,result0[1])}if(result0===null){pos=pos0}}return result0}function parse_operator(){var result0;var pos0;if(input.substr(pos,2)==="OR"){result0="OR";pos+=2}else{result0=null;if(reportFailures===0){matchFailed('"OR"')}}if(result0===null){if(input.substr(pos,3)==="AND"){result0="AND";pos+=3}else{result0=null;if(reportFailures===0){matchFailed('"AND"')}}if(result0===null){if(input.substr(pos,3)==="NOT"){result0="NOT";pos+=3}else{result0=null;if(reportFailures===0){matchFailed('"NOT"')}}if(result0===null){pos0=pos;if(input.substr(pos,2)==="||"){result0="||";pos+=2}else{result0=null;if(reportFailures===0){matchFailed('"||"')}}if(result0!==null){result0=function(offset){return"OR"}(pos0)}if(result0===null){pos=pos0}if(result0===null){pos0=pos;if(input.substr(pos,2)==="&&"){result0="&&";pos+=2}else{result0=null;if(reportFailures===0){matchFailed('"&&"')}}if(result0!==null){result0=function(offset){return"AND"}(pos0)}if(result0===null){pos=pos0}}}}}return result0}function parse_prefix_operator_exp(){var result0,result1;var pos0,pos1;pos0=pos;pos1=pos;result0=[];result1=parse__();while(result1!==null){result0.push(result1);result1=parse__()}if(result0!==null){result1=parse_prefix_operator();if(result1!==null){result0=[result0,result1]}else{result0=null;pos=pos1}}else{result0=null;pos=pos1}if(result0!==null){result0=function(offset,operator){return operator}(pos0,result0[1])}if(result0===null){pos=pos0}return result0}function parse_prefix_operator(){var result0;if(input.charCodeAt(pos)===43){result0="+";pos++}else{result0=null;if(reportFailures===0){matchFailed('"+"')}}if(result0===null){if(input.charCodeAt(pos)===45){result0="-";pos++}else{result0=null;if(reportFailures===0){matchFailed('"-"')}}}return result0}function parse__(){var result0,result1;reportFailures++;if(/^[ \t\r\n\f]/.test(input.charAt(pos))){result1=input.charAt(pos);pos++}else{result1=null;if(reportFailures===0){matchFailed("[ \\t\\r\\n\\f]")}}if(result1!==null){result0=[];while(result1!==null){result0.push(result1);if(/^[ \t\r\n\f]/.test(input.charAt(pos))){result1=input.charAt(pos);pos++}else{result1=null;if(reportFailures===0){matchFailed("[ \\t\\r\\n\\f]")}}}}else{result0=null}reportFailures--;if(reportFailures===0&&result0===null){matchFailed("whitespace")}return result0}function parse_EOF(){var result0;var pos0;pos0=pos;reportFailures++;if(input.length>pos){result0=input.charAt(pos);pos++}else{result0=null;if(reportFailures===0){matchFailed("any character")}}reportFailures--;if(result0===null){result0=""}else{result0=null;pos=pos0}return result0}function cleanupExpected(expected){expected.sort();var lastExpected=null;var cleanExpected=[];for(var i=0;i<expected.length;i++){if(expected[i]!==lastExpected){cleanExpected.push(expected[i]);lastExpected=expected[i]}}return cleanExpected}function computeErrorPosition(){var line=1;var column=1;var seenCR=false;for(var i=0;i<Math.max(pos,rightmostFailuresPos);i++){var ch=input.charAt(i);if(ch==="\n"){if(!seenCR){line++}column=1;seenCR=false}else if(ch==="\r"||ch==="\u2028"||ch==="\u2029"){line++;column=1;seenCR=true}else{column++;seenCR=false}}return{line:line,column:column}}var result=parseFunctions[startRule]();if(result===null||pos!==input.length){var offset=Math.max(pos,rightmostFailuresPos);var found=offset<input.length?input.charAt(offset):null;var errorPosition=computeErrorPosition();throw new this.SyntaxError(cleanupExpected(rightmostFailuresExpected),found,offset,errorPosition.line,errorPosition.column)}return result},toSource:function(){return this._source}};result.SyntaxError=function(expected,found,offset,line,column){function buildMessage(expected,found){var expectedHumanized,foundHumanized;switch(expected.length){case 0:expectedHumanized="end of input";break;case 1:expectedHumanized=expected[0];break;default:expectedHumanized=expected.slice(0,expected.length-1).join(", ")+" or "+expected[expected.length-1]}foundHumanized=found?quote(found):"end of input";return"Expected "+expectedHumanized+" but "+foundHumanized+" found."}this.name="SyntaxError";this.expected=expected;this.found=found;this.message=buildMessage(expected,found);this.offset=offset;this.line=line;this.column=column};result.SyntaxError.prototype=Error.prototype;return result}();return module.exports});
